--- a/HodEngine/Core/CMakeLists.txt
+++ b/HodEngine/Core/CMakeLists.txt
@@ -1,23 +1,34 @@
-# Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
 project(Core)
 
-file(GLOB_RECURSE Srcs
-	"${PROJECT_SOURCE_DIR}/src/*.cpp"
-	"${PROJECT_SOURCE_DIR}/src/*.h"
-	"${PROJECT_SOURCE_DIR}/src/*.inl"
-)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake)
+find_package(Glm REQUIRED)
 
+file(GLOB_RECURSE Srcs
+	"${PROJECT_SOURCE_DIR}/Src/*.cpp"
+	"${PROJECT_SOURCE_DIR}/Src/*.h"
+	"${PROJECT_SOURCE_DIR}/Src/*.inl"
+)
 assign_source_group(${Srcs})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
-".."
-"${SDK_DIR}/glm"
+	".."
+	${Glm_INCLUDE_DIRS}
 )
 
 add_library(Core ${Srcs})
 
-target_link_libraries(Core
-optimized "${SDK_DIR}/Build/glm/glm/Release/glm_static.lib" debug "${SDK_DIR}/Build/glm/glm/Debug/glm_static.lib"
+set (Uuid_LIB)
+
+if (UNIX)
+	set (Uuid_LIB uuid)
+else ()
+	set (Uuid_LIB "")
+endif (UNIX)
+
+target_link_libraries(
+	Core
+	${Glm_LIBRARIES}
+	${Uuid_LIB}
 )
