--- a/HodEngine/ImGui/CMakeLists.txt
+++ b/HodEngine/ImGui/CMakeLists.txt
@@ -1,46 +1,27 @@
-# Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
-function(assign_source_group)
-    foreach(_source IN ITEMS ${ARGN})
-        if (IS_ABSOLUTE "${_source}")
-            file(RELATIVE_PATH _source_rel "${CMAKE_CURRENT_SOURCE_DIR}" "${_source}")
-        else()
-            set(_source_rel "${_source}")
-        endif()
-        get_filename_component(_source_path "${_source_rel}" PATH)
-        string(REPLACE "/" "\\" _source_path_msvc "${_source_path}")
-        source_group("${_source_path_msvc}" FILES "${_source_rel}")
-    endforeach()
-endfunction(assign_source_group)
-
 project(ImGui)
+
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake)
+find_package(SDL2 REQUIRED)
+find_package(Vulkan REQUIRED)
 
 file(GLOB_RECURSE Srcs
 	"${PROJECT_SOURCE_DIR}/src/*.cpp"
 	"${PROJECT_SOURCE_DIR}/src/*.h"
 	"${PROJECT_SOURCE_DIR}/src/*.inl"
 )
-
 assign_source_group(${Srcs})
-		
+
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
-".."
-"${SDK_DIR}/SDL/include"
+  ".."
+  ${SDL2_INCLUDE_DIRS}
+  ${Vulkan_INCLUDE_DIRS}
 )
 
 add_library(ImGui ${Srcs})
 
 target_link_libraries(ImGui
-optimized "${SDK_DIR}/Build/SDL/Release/SDL2.lib" debug "${SDK_DIR}/Build/SDL/Debug/SDL2d.lib"
+  ${SDL2_LIBRARIES}
+  ${Vulkan_LIBRARIES}
 )
-
-find_package(Vulkan)
-if (Vulkan_FOUND)
-  # Une fois la dépendance trouvée, nous l'incluons au projet
-  target_include_directories(ImGui PUBLIC ${Vulkan_INCLUDE_DIRS})
-  target_link_libraries (ImGui ${Vulkan_LIBRARIES})
-else ()
-  # Sinon, nous affichons un message
-  message(FATAL_ERROR "Vulkan not found")
-endif ()
