--- a/HodEngine/Physics/CMakeLists.txt
+++ b/HodEngine/Physics/CMakeLists.txt
@@ -1,29 +1,29 @@
-# Nous voulons un cmake "récent" pour utiliser les dernières fonctionnalités
 cmake_minimum_required(VERSION 3.4)
 
 project(Physics)
 
-file(GLOB_RECURSE Srcs
-		"${PROJECT_SOURCE_DIR}/src/*.cpp"
-		"${PROJECT_SOURCE_DIR}/src/*.h"
-		"${PROJECT_SOURCE_DIR}/src/*.inl"
-)
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake)
+find_package(Box2d REQUIRED)
 
+file(GLOB_RECURSE Srcs
+	"${PROJECT_SOURCE_DIR}/src/*.cpp"
+	"${PROJECT_SOURCE_DIR}/src/*.h"
+	"${PROJECT_SOURCE_DIR}/src/*.inl"
+)
 assign_source_group(${Srcs})
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
-".."
-"${SDK_DIR}/glm"
-"${SDK_DIR}/box2d/include"
+	".."
+	${Box2d_INCLUDE_DIRS}
 )
 
-add_library(Physics ${Srcs})
+add_library(Physics STATIC ${Srcs})
 
 add_dependencies(Physics Core DebugLayer Renderer)
 
 target_link_libraries(Physics
-Core
-DebugLayer
-Renderer
-optimized "${SDK_DIR}/Build/box2d/bin/Release/box2d.lib" debug "${SDK_DIR}/Build/box2d/bin/Debug/box2d.lib"
+	Core
+	DebugLayer
+	Renderer
+	${Box2d_LIBRARIES}
 )
