--- a/HodEngine/Application/CMakeLists.txt
+++ b/HodEngine/Application/CMakeLists.txt
@@ -14,6 +14,13 @@ assign_source_group(${Srcs})
 
 add_library(Application ${Srcs})
 
+if(MSVC)
+	#target_compile_options(HodEngine-Application PRIVATE /W4 /WX)
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD")
+else()
+	#target_compile_options(HodEngine-Application PRIVATE -Wall -Wextra -pedantic -Werror)
+endif()
+
 add_dependencies(Application Core)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 
