--- a/HodEngine/Physics/CMakeLists.txt
+++ b/HodEngine/Physics/CMakeLists.txt
@@ -19,6 +19,13 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 	${Glm_INCLUDE_DIRS}
 )
 
+if(MSVC)
+	#target_compile_options(HodEngine-Application PRIVATE /W4 /WX)
+	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD")
+else()
+	#target_compile_options(HodEngine-Application PRIVATE -Wall -Wextra -pedantic -Werror)
+endif()
+
 add_library(Physics STATIC ${Srcs})
 
 add_dependencies(Physics Core DebugLayer Renderer)
