Wip editor (avant abandon de Qt)

--- a/HodEngine/Application/CMakeLists.txt
+++ b/HodEngine/Application/CMakeLists.txt
@@ -4,6 +4,7 @@ project(Application)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/../../CMake)
 find_package(SDL2 REQUIRED)
+find_package(Vulkan REQUIRED) # imgui... todo remove
 
 file(GLOB_RECURSE Srcs
 	"${PROJECT_SOURCE_DIR}/src/*.cpp"
@@ -27,6 +28,7 @@ get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
 	".."
 	${SDL2_INCLUDE_DIRS}
+	${Vulkan_INCLUDE_DIRS} # imgui... todo remove
 	${Core_INCLUDES}
 )
 
@@ -34,4 +36,5 @@ target_link_libraries(Application
 	Core
 	${SDL2_LIBRARIES}
 	${SDL2MAIN_LIBRARY}
+	${Vulkan_LIBRARIES} # imgui... todo remove
 )
