--- a/Sources/HodEngine/Core/CMakeLists.txt
+++ b/Sources/HodEngine/Core/CMakeLists.txt
@@ -6,13 +6,13 @@ find_package(Glm REQUIRED)
 find_package(RapidJSON REQUIRED)
 
 file(GLOB_RECURSE Srcs
-	"${PROJECT_SOURCE_DIR}/Src/*.cpp"
-	"${PROJECT_SOURCE_DIR}/Src/*.h"
-	"${PROJECT_SOURCE_DIR}/Src/*.inl"
+	"${PROJECT_SOURCE_DIR}/*.cpp"
+	"${PROJECT_SOURCE_DIR}/*.h"
+	"${PROJECT_SOURCE_DIR}/*.inl"
 )
 assign_source_group(${Srcs})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	PRIVATE "../.."
 	PUBLIC ${Glm_INCLUDE_DIRS}
 	PUBLIC ${RapidJSON_INCLUDE_DIRS}
