--- a/Sources/HodEngine/Editor/CMakeLists.txt
+++ b/Sources/HodEngine/Editor/CMakeLists.txt
@@ -3,13 +3,13 @@ cmake_minimum_required(VERSION 3.4)
 project(Editor)
 
 file(GLOB_RECURSE Srcs
-	"${PROJECT_SOURCE_DIR}/src/*.cpp"
-	"${PROJECT_SOURCE_DIR}/src/*.h"
-	"${PROJECT_SOURCE_DIR}/src/*.inl"
+	"${PROJECT_SOURCE_DIR}/*.cpp"
+	"${PROJECT_SOURCE_DIR}/*.h"
+	"${PROJECT_SOURCE_DIR}/*.inl"
 )
 assign_source_group(${Srcs})
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	"../.."
 )
 
@@ -25,7 +25,7 @@ add_library(Editor OBJECT ${Srcs})
 add_dependencies(Editor Core ImGui Window Physics Renderer)
 get_target_property(Core_INCLUDES Core INCLUDE_DIRECTORIES)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/Src
+include_directories(${CMAKE_CURRENT_SOURCE_DIR}
 	"../.."
 	${Core_INCLUDES}
 )
