--- a/Sources/HodEngine/BUILD.bazel
+++ b/Sources/HodEngine/BUILD.bazel
@@ -9,6 +9,8 @@ cc_library(
 		"Core/**/*.cpp",
 		"Application/**/*.cpp",
 		"Editor/**/*.cpp",
+		"Physics/**/*.cpp",
+		"Game/**/*.cpp",
 		"ImGui/**/*.cpp",
 		"Renderer/**/*.cpp",
 		"Window/**/*.cpp"
@@ -20,6 +22,10 @@ cc_library(
 		"Application/**/*.inl",
 		"Editor/**/*.h",
 		"Editor/**/*.inl",
+		"Physics/**/*.h",
+		"Physics/**/*.inl",
+		"Game/**/*.h",
+		"Game/**/*.inl",
 		"ImGui/**/*.h",
 		"ImGui/**/*.inl",
 		"Renderer/**/*.h",
@@ -31,6 +37,7 @@ cc_library(
 		"@rapidjson//:rapidjson",
 		"@glm//:glm",
 		"@stb//:stb",
+		"@box2d//:box2d",
 		"@vulkan//:vulkan"
 	],
 	defines = [platform_define],
