--- a/WORKSPACE.bazel
+++ b/WORKSPACE.bazel
@@ -42,3 +42,9 @@ new_local_repository(
     path = "C:\\VulkanSDK\\1.3.243.0\\",
     build_file = "SDK/BUILD.vulkan",
 )
+
+new_local_repository(
+    name = "box2d",
+    path = "SDK/box2d",
+    build_file = "SDK/BUILD.box2d",
+)
