Bazel fix box2d

--- a/SDK/box2d.bazel
+++ b/SDK/box2d.bazel
@@ -1,13 +1,14 @@
 
 cc_library(
 	name = "box2d",
-	srcs = glob(["src/**/*.cpp", "include/**/*.h"]),
+	srcs = glob(["src/**/*.cpp", "src/**/*.h", "include/**/*.h"]),
 	hdrs = glob(["include/**/*.h"]),
 	includes = [ "box2d" ],
 	visibility = ["//visibility:public"],
 	strip_include_prefix = "include",
 	copts = [
-        "-Iexternal/box2d/include",
-		"-Iexternal/box2d"
+		"-Iexternal/box2d/include",
+		"-Iexternal/box2d",
+		"-Iexternal/box2d/src",
 	]
 )
