Add Thumbnail generation (wip display in AssetBrowser)

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -22,7 +22,8 @@
 			"type": "shell",
 			"command": "bazel",
 			"args": ["build", "Sources/EditorApplication:HodEditor"],
-			"group": "build"
+			"group": "build",
+			"problemMatcher": ["$msCompile"],
 		},
 		{
 			"label": "Clean",
