--- a/Sources/HodEngine/Core/CMakeLists.txt
+++ b/Sources/HodEngine/Core/CMakeLists.txt
@@ -1,42 +1,33 @@
-cmake_minimum_required(VERSION 3.4)
+cmake_minimum_required(VERSION 3.4...3.27)
+
+include(Global)
 
 project(Core)
-
-find_package(Glm REQUIRED)
 
 file(GLOB_RECURSE Srcs
 	"${PROJECT_SOURCE_DIR}/*.cpp"
 	"${PROJECT_SOURCE_DIR}/*.h"
 	"${PROJECT_SOURCE_DIR}/*.inl"
 )
-assign_source_group(${Srcs})
+
+file(GLOB_RECURSE Includes
+"${PROJECT_SOURCE_DIR}/*.h"
+"${PROJECT_SOURCE_DIR}/*.inl"
+)
+
+assign_source_group(${Srcs}) # for VS
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-	PRIVATE "../.."
-	PUBLIC ${Glm_INCLUDE_DIRS}
+	"../.."
 )
 
-if(MSVC)
-	#target_compile_options(HodEngine-Application PRIVATE /W4 /WX)
-	set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MD")
-else()
-	#target_compile_options(HodEngine-Application PRIVATE -Wall -Wextra -pedantic -Werror)
-endif()
+add_library(Core OBJECT ${Srcs} ${Includes})
 
-add_library(Core OBJECT ${Srcs})
+set(UUID_LIB "")
 
-set (Uuid_LIB)
+if(UNIX)
+	set(UUID_LIB uuid)
+endif(UNIX)
 
-if (UNIX)
-	set (Uuid_LIB uuid)
-else ()
-	set (Uuid_LIB "")
-endif (UNIX)
-
-target_link_libraries(
-	Core
-	${Glm_LIBRARIES}
-	${Uuid_LIB}
-)
-
-target_compile_definitions(Core PUBLIC ${PLATFORM_DEFINE} ${RENDERER_DEFINE} ${RENDERER_ENABLE_VALIDATION_LAYER_DEFINE})
+target_link_libraries(Core ${UUID_LIB})
+target_compile_definitions(Core PUBLIC ${PLATFORM_DEFINE})
