Linux Window wip

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 project(HodEngine) # Rename
 
 add_subdirectory("Sources/HodEngine/Core")
+add_subdirectory("Sources/HodEngine/Window")
 
 #add_subdirectory("Sources/HodEngine")
 #add_subdirectory("Sources/GameApplication")
