Cmake renderer + Stb and SpirvCross dependency

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,13 @@
 cmake_minimum_required(VERSION 3.4...3.27)
 
+include(FetchContent)
+
+FetchContent_Declare(
+  stb
+  URL https://github.com/nothings/stb/archive/refs/heads/master.zip)
+FetchContent_Populate(stb)
+message(STATUS "stb is available in " ${stb_SOURCE_DIR})
+
 set(SDK_DIR "${CMAKE_CURRENT_SOURCE_DIR}/SDK")
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMake")
 
@@ -10,6 +18,7 @@ project(HodEngine) # Rename
 
 add_subdirectory("Sources/HodEngine/Core")
 add_subdirectory("Sources/HodEngine/Window")
+add_subdirectory("Sources/HodEngine/Renderer")
 
 #add_subdirectory("Sources/HodEngine")
 #add_subdirectory("Sources/GameApplication")
